--- a/stazone/templates/all-stazone/base.html
+++ b/stazone/templates/all-stazone/base.html
@@ -1,3 +1,4 @@
+{% load bootstrap4 %}
 <!DOCTYPE html>
 <html>
 
@@ -8,11 +9,19 @@
     <title>Instagram </title>
     {% endif %}
 
+     {% block styles %} 
+     {% bootstrap_css %} 
+     {% endblock %}
+
+
 </head>
 
 <body>
     {% block content %}
     <h1>{{date|date:"l d-F Y"}}</h1> {%endblock%}
+
+     {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> {% bootstrap_javascript %} {% endblock %}
 </body>
 
 </html>
