--- a/stazone/templates/all-stazone/base.html
+++ b/stazone/templates/all-stazone/base.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    {% block content %}
-    <h1>{{date|date:"l d-F Y"}}</h1> {%endblock%}
+     {% block content %}
+    <h1 class='text-center'>{{date|date:"l d-F Y"}}</h1> {%endblock%}
 
      {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> {% bootstrap_javascript %} {% endblock %}
