--- a/stazone/templates/all-stazone/base.html
+++ b/stazone/templates/all-stazone/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -17,6 +18,9 @@
 </head>
 
 <body>
+     {% include "navbar.html" %}
+
+
      {% block content %}
     <h1 class='text-center'>{{date|date:"l d-F Y"}}</h1> {%endblock%}
 
