added a stylesheet link in the base file

--- a/stazone/templates/all-stazone/base.html
+++ b/stazone/templates/all-stazone/base.html
@@ -11,7 +11,8 @@
     {% endif %}
 
      {% block styles %} 
-     {% bootstrap_css %} 
+     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/basestazone.css' %}">
      {% endblock %}
 
 
