--- a/stazone/templates/all-stazone/today-stazone.html
+++ b/stazone/templates/all-stazone/today-stazone.html
@@ -1,4 +1,24 @@
-{%extends 'all-stazone/base.html'%} 
-{% block content %} 
-{{block.super}} 
+{%extends 'all-stazone/base.html'%} {% block content %} {{ block.super}}
+
+<div class="container">
+
+    <!-- Looping through stazone   -->
+    {% for image_item in images %}
+
+    <div class="row">
+        <!-- displaying stazone images -->
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h2 class="text-center"> {{ image_item.name }} </h2>
+        </div>
+
+    </div>
+
+    {% empty %}
+    <div class="row">
+        <h2 class="text-center">There No News Items</h2>
+    </div>
+    {% endfor %}
+
+</div>
+
 {% endblock %}
