--- a/stazone/templates/navbar.html
+++ b/stazone/templates/navbar.html
@@ -19,9 +19,9 @@
                 <form class="navbar-form" role="search" action="{% url 'search_results' %}">
             
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" name="image">
+                        <input type="text" class="form-control" placeholder="Search image" name="image">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
+                            <button class="btn btn-warning" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
                             </button>
                         </div>
