added a field to display uploaded images

--- a/stazone/templates/all-stazone/today-stazone.html
+++ b/stazone/templates/all-stazone/today-stazone.html
@@ -12,6 +12,10 @@
         </div>
 
     </div>
+    <!--Display stazone profile images -->
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <img src="{{stazone_item.profile_image.url}}" class="img-responsive" alt="Image">
+    </div>
 
     {% empty %}
     <div class="row">
