--- a/stazone/templates/all-stazone/today-stazone.html
+++ b/stazone/templates/all-stazone/today-stazone.html
@@ -1,4 +1,12 @@
 {%extends 'all-stazone/base.html'%} {% block content %} {{ block.super}}
+<div class="container-fluid">
+
+    <form action="{%url 'search_results'%}" method="post">
+        {%csrf_token%} {% bootstrap_form letterForm layout='inline' %}
+        <input type="submit" value="Subscribe">
+    </form>
+
+</div>
 
 <div class="container">
 
