--- a/stazone/templates/all-stazone/base.html
+++ b/stazone/templates/all-stazone/base.html
@@ -10,7 +10,10 @@
 
     {%endif%} {% block styles %} 
     {% bootstrap_css %} 
-    <link rel="stylesheet" href="{% static 'css/basestazone.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU'
+    crossorigin='anonymous'>    
+    <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
     {% endblock %}
 
 </head>
