--- a/stazone/templates/navbar.html
+++ b/stazone/templates/navbar.html
@@ -8,21 +8,21 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'welcome' %}">Instagram</a>
-            </div>
+<nav class="navbar" style="background-color:whitesmoke;margin-bottom:10px;position: fixed;width:100%;opacity:0.7">
+    <section class="logo-section">
+        <img class="logo" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png" width="100" height="100" />
+        <img class ="logoname" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWYoZShtc1_kJ5kMrP1UOZUA-fJER42XdifAI4K4XWUNT8nz24Xw" width="50" height="50">
+    </section>
             
             <!-- Adding a search form  -->
-            <div class="col-sm-4 col-md-4 navbar-right">
+            <div class="col-sm-4 col-md-4 navbar-center" style="padding-right:30px;padding-left: 200px">
             
                 <form class="navbar-form" role="search" action="{% url 'search_results' %}">
             
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search image" name="image">
                         <div class="input-group-btn">
-                            <button class="btn btn-warning" type="submit">
+                            <button class="btn btn-success" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
                             </button>
                         </div>
@@ -32,11 +32,11 @@
             </div>
             <!-- search form end -->
             <!--The search form above-->
-            <div class="col-sm-6 col-md-6">
+            <div class="col-sm-6 col-md-6" style="text-align: left;">
                 {% if user.is_authenticated %}
-                <ul>
+                 <ul> 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
+                        <a href="#" class="dropdown-toggle btn btn-success" data-toggle="dropdown" role="button" aria-expanded="false">Account
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
@@ -52,18 +52,27 @@
                             <li>
                                 <a href="/logout">Logout</a>
                             </li>
-                        </ul>
+                        </ul> 
                     </li>
-                </ul>
+                 </ul>
                 {% else %}
                 <li>
-                    <a class='btn btn-default' href="/accounts/login">Login</a>
+                    <a class='btn btn-success' href="/accounts/login">Login</a>
                 </li>
             
                 {% endif %}
             </div>
 
+
         </div>
+        <section class="icons-section" style="text-align: center;color:whitesmoke;padding-left:1200px;">
+            <a class="fa fa-compass" href="#"></a>
+
+            <a class="fa fa-heart" href="#"></a>
+
+            <a class="fa fa-user" href="#"></a>
+        </section>
+        
     </nav>
 </body>
 
