--- a/stazone/templates/new_image.html
+++ b/stazone/templates/new_image.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <form action="{%url 'new-image'%}" method="post" enctype="multipart/form-data">
+    <form action="{%url 'search_results'%}" method="post" enctype="multipart/form-data">
         {%csrf_token%} {% bootstrap_form form%}
         <input type="submit" class="btn btn-success btn-lg" value="Post">
     </form>
