--- a/stazone/templates/registration/login.html
+++ b/stazone/templates/registration/login.html
@@ -22,6 +22,10 @@
                         </div>
 
                         <input type="hidden" name="next" value="{{next}}">
+                        <input type="hidden" name="next" value="{{next}}">
+                        <p>Don't have an account? Sign up
+                            <a href="/accounts/register/">here</a>
+                        </p>
 
                     </form>
 
