--- a/stazone/templates/registration/registration_form.html
+++ b/stazone/templates/registration/registration_form.html
@@ -2,14 +2,20 @@
 <div class="container">
     <div class="row">
         <!-- Empty div -->
-        <div class="col-md-4"></div>
         <div class="col-md-4">
+            <img src="https://images.pexels.com/photos/163141/instagram-social-media-web-pages-internet-163141.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width="500" height="500"
+                alt="">
+        </div>
+    
+        <div class="col-md-4">
+
             {% if form.errors %}
             <p> Some Information Might be Incorrect </p>
             {% endif %}
             <div class="panel panel-default">
 
                 <div class="panel-heading">
+                    
                     <h3 class="text-center">Sign Up</h3>
                 </div>
                 <div class="panel-body">
