--- a/stazone/templates/all-stazone/base.html
+++ b/stazone/templates/all-stazone/base.html
@@ -19,10 +19,14 @@
 </head>
 
 <body>
-     {% include "navbar.html" %}
-
-    {% block content %} {%endblock%} {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> {% bootstrap_javascript %} {% endblock %}
+    <div class="container">
+             {% include "navbar.html" %} 
+             <div style="margin-top: 120px">
+             {% block content %} {%endblock%}
+             </div>
+             {% block scripts %}
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> {% bootstrap_javascript %} {% endblock %}
+    </div>
 
 </body>
 
