--- a/stazone/templates/new_image.html
+++ b/stazone/templates/new_image.html
@@ -8,19 +8,20 @@
 
     <title>New Image</title>
     {{form.media}} {% block styles %} {% bootstrap_css %}
-    <link rel="stylesheet" href="{% static 'css/insta.css' %}"> {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endblock %}
 
 </head>
 
 <body>
-
-    <form action="{%url 'search_results'%}" method="post" enctype="multipart/form-data">
+    
+    <form action="{%url 'welcome'%}" method="post" enctype="multipart/form-data">
         {%csrf_token%} {% bootstrap_form form%}
         <input type="submit" class="btn btn-success btn-lg" value="Post">
     </form>
 
     {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> {% bootstrap_javascript %} {% endblock %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+    {% bootstrap_javascript %} {% endblock %}
 
 </body>
 
