--- a/stazone/templates/registration/login.html
+++ b/stazone/templates/registration/login.html
@@ -2,7 +2,9 @@
 <div class="container">
     <div class="row">
         <!-- Empty div -->
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <img src="https://as2.ftcdn.net/jpg/00/75/54/25/500_F_75542534_CMhT2KmesrpOzt0DI8wIkSp8ECnYNE1P.jpg" alt="" width="350" height="300">
+        </div>
         <div class="col-md-4">
             {% if form.errors %}
             <p> Password or Username is incorrect </p>
